✨ you can now create flowers from the parterre

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./*"],
-      "@firebase/*": ["./firebase/*"]
+      "@firebase/*": ["./firebase/*"],
     }
   }
 }
