--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.7.1",
     "next": "14.0.4",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18"
   },
   "devDependencies": {
